crates/air/tests/snapshots/format__check_output_format-2.snap
---
source: crates/air/tests/format.rs
expression: "run(Command::new(get_air_bin()).arg(\"format\").arg(path1).arg(path2).arg(\"--check=interactive\"))"
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Would reformat: fixtures/format/needs-formatting-1.R
Would reformat: fixtures/format/needs-formatting-2.R

----- args -----
format
/Users/davis/files/programming/air/crates/air/fixtures/format/needs-formatting-1.R
/Users/davis/files/programming/air/crates/air/fixtures/format/needs-formatting-2.R
--check=interactive
